objects/PMC_CLM_SalesAgreement__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Sales_Agreement</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PMC_CLM_AgreementEndDate__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Agreement End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PMC_CLM_AgreementStartDate__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Agreement Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PMC_CLM_UnitOfMeasure__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Unit Of Measure</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Sales Agreement</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Sales Agreement Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales Agreement</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>